Second commit of this project

--- a/index.html
+++ b/index.html
@@ -105,12 +105,14 @@
             </div>
             <!-- End of segment -->
             <!-- Beginning of segment 7 -->
-            <div>
+            <div class="seg7">
                 <label for="comment">Additioanl comments:</label>
-                <textarea name="" id="comment" cols="70" rows="50"></textarea>
+                <br>
+                <textarea name="" id="comment" cols="70" rows="20"></textarea>
             </div>
-
-
+            <div class="aligner">
+                <input  type="submit" value="Submit">
+            </div>
 
         </form>
     </div>
