Almost final result

--- a/index.html
+++ b/index.html
@@ -29,22 +29,36 @@
             <div>
                 Overall, how satisfied are you with the product or service?
                 <div class="seg2">
-                    <input type="radio" name="satisfaction" id="verySat">
-                    <label for="verySat">Very satisfied</label>
-                    <input type="radio" name="satisfaction" id="sat">
-                    <label for="sat">Satisfied</label>
+                    <dl>
+                        <input type="radio" name="satisfaction" id="verySat">
+                        <label for="verySat">Very satisfied</label>
+                    </dl>
+                    <dl>
+                        <input type="radio" name="satisfaction" id="sat">
+                        <label for="sat">Satisfied</label>
+                    </dl>
                 </div>
                 <div class="seg2">
-                    <input type="radio" name="satisfaction" id="neutral">
-                    <label for="verySat">Neutral</label>
-                    <input type="radio" name="satisfaction" id="unSat">
-                    <label for="unSat">Unsatisfied</label>
+                    <dl>
+                        <input type="radio" name="satisfaction" id="neutral">
+                        <label for="verySat">Neutral</label>
+                    </dl>
+                    <dl>
+                        <input type="radio" name="satisfaction" id="unSat">
+                        <label for="unSat">Unsatisfied</label>
+                    </dl>
+
                 </div>
                 <div class="seg2">
-                    <input type="radio" name="satisfaction" id="veryUnSat">
-                    <label for="veryUnSat">Very Unsatisfied</label>
-                    <input type="radio" name="satisfaction" id="na">
-                    <label for="na">N/A</label>
+                    <dl>
+                        <input type="radio" name="satisfaction" id="veryUnSat">
+                        <label for="veryUnSat">Very Unsatisfied</label>
+                    </dl>
+                    <dl>
+                        <input type="radio" name="satisfaction" id="na">
+                        <label for="na">N/A</label>
+                    </dl>
+                    
                 </div>
             </div>
             <!-- End of segment 2 -->
@@ -74,16 +88,25 @@
             <div>
                 What aspect of the product or service were you most satisfied by?
                 <div class="seg2">
-                    <input type="radio" name="aspect" id="quality">
-                    <label for="quality">Qaulity</label>
-                    <input type="radio" name="aspect" id="price">
-                    <label for="price">Price</label>
+                    <dl>
+                        <input type="radio" name="aspect" id="quality">
+                        <label for="quality">Qaulity</label>
+                    </dl>
+                    <dl>
+                        <input type="radio" name="aspect" id="price">
+                        <label for="price">Price</label>
+                    </dl>
                 </div>
                 <div class="seg2">
-                    <input type="radio" name="aspect" id="cust">
-                    <label for="cust">Customer service</label>
-                    <input type="radio" name="aspect" id="serv">
-                    <label for="serv">Installation or first use experience</label>
+                    <dl>
+                        <input type="radio" name="aspect" id="cust">
+                        <label for="cust">Customer service</label>
+                    </dl>
+                    <dl>
+                        <input type="radio" name="aspect" id="serv">
+                        <label for="serv">Installation or first use experience</label>
+                    </dl>
+
                 </div>
             </div>
             <!-- End of segment 5 -->
@@ -91,24 +114,35 @@
             <div>
                 What aspect of the product or service were you least satisfied by?
                 <div class="seg2">
-                    <input type="radio" name="aspect" id="quality">
-                    <label for="quality">Qaulity</label>
-                    <input type="radio" name="aspect" id="price">
-                    <label for="price">Price</label>
+                    <dl>
+                        <input type="radio" name="aspect" id="quality">
+                        <label for="quality">Qaulity</label>
+                    </dl>
+                    <dl>
+                        <input type="radio" name="aspect" id="price">
+                        <label for="price">Price</label>
+                    </dl>
                 </div>
                 <div class="seg2">
-                    <input type="radio" name="aspect" id="cust">
-                    <label for="cust">Customer service</label>
-                    <input type="radio" name="aspect" id="serv">
-                    <label for="serv">Installation or first use experience</label>
+                    <dl>
+                        <input type="radio" name="aspect" id="cust">
+                        <label for="cust">Customer service</label>
+                    </dl>
+                    <dl>
+                        <input type="radio" name="aspect" id="serv">
+                        <label for="serv">Installation or first use experience</label>
+                    </dl>
+
                 </div>
             </div>
             <!-- End of segment -->
             <!-- Beginning of segment 7 -->
             <div class="seg7">
                 <label for="comment">Additioanl comments:</label>
-                <br>
-                <textarea name="" id="comment" cols="70" rows="20"></textarea>
+                <div>
+                    <textarea name="" id="comment" cols="70" rows="20" placeholder="Type here..."></textarea>
+                </div>
+
             </div>
             <div class="aligner">
                 <input  type="submit" value="Submit">
